# todo-actix

./: Cargo.toml  docker-compose.yml  state.json
css/: main.css
javascript/: login.js  main.js
migrations/2023-01-09-113849_create_users/: up.sql
src/: database.rs  main.rs  processes.rs  state.rs
src/auth/: jwt.rs  mod.rs  processes.rs
src/json_serialization/: new_user.rs  to_do_items.rs
src/models/item/: existing_item.rs  generic_item.rs  item.rs  mod.rs  new_item.rs
src/models/user/: generic_user.rs  mod.rs  new_user.rs  user.rs
src/to_do/: mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  on_hold.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
src/views/: mod.rs  path.rs  token.rs
src/views/app/: content_loader.rs  items.rs  login.rs  logout.rs  mod.rs
src/views/auth/: login.rs  logout.rs  mod.rs
src/views/to_do/: create.rs  delete.rs  edit.rs  get.rs  mod.rs  utils.rs
src/views/users/: create.rs  mod.rs
templates/: login.html  main.html
templates/components/: header.html
