[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
async-std = "1.12.0"
futures = "0.3.25"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["alloc"] }
