[package]
name = "todo-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.2.1"
async-std = "1.12.0"
bcrypt = "0.13.0"
diesel = { version = "2.0.2", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
hmac = "0.12.1"
jwt = "0.16.0"
log = "0.4.17"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["indexmap", "alloc"] }
sha2 = "0.10.6"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
